<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/colorGreyBackground"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutToolBar"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        >

        <com.stark.storeapp.utils.customtextview.StoreAppCustomTextView
            android:id="@+id/textHomeTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:fontType="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/home"
            android:layout_marginHorizontal="14dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutToolBar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:contentDescription="@string/nested_scrollview"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPagerBanners"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="14dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <LinearLayout
                android:id="@+id/dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/viewPagerBanners"
                app:layout_constraintEnd_toEndOf="@+id/viewPagerBanners"
                app:layout_constraintBottom_toBottomOf="@+id/viewPagerBanners"
                android:layout_marginBottom="14dp"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/dotOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bg_white_circle"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center_vertical"
                    />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/dotTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bg_grey_circle"
                    android:layout_marginEnd="5dp"
                    android:layout_gravity="center_vertical"
                    />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/dotThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bg_grey_circle"
                    android:layout_gravity="center_vertical"
                    />

            </LinearLayout>


            <com.stark.storeapp.utils.customtextview.StoreAppCustomTextView
                android:id="@+id/textTopDeals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewPagerBanners"
                android:layout_marginTop="24dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                app:fontType="semiBold"
                android:textSize="16sp"
                android:text="@string/top_deals"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewTopDeals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textTopDeals"
                android:layout_marginTop="12dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                />
            <com.stark.storeapp.utils.customtextview.StoreAppCustomTextView
                android:id="@+id/todayTopDeals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerviewTopDeals"
                android:layout_marginTop="14dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                app:fontType="semiBold"
                android:textSize="16sp"
                android:text="@string/today_deals"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewTodayDeals"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                android:paddingStart="14dp"
                android:paddingEnd="7dp"
                tools:listitem="@layout/cell_today_deals"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todayTopDeals"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>