<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment"
    android:background="@color/colorGreyBackground"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutToolBar"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        >

        <com.stark.storeapp.utils.customtextview.StoreAppCustomTextView
            android:id="@+id/textHomeTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:fontType="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/login"
            android:layout_marginHorizontal="14dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

   <androidx.core.widget.NestedScrollView
       android:id="@+id/nestedScrollView"
       android:layout_width="0dp"
       android:layout_height="0dp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/layoutToolBar"
       app:layout_constraintBottom_toBottomOf="parent"
       android:fitsSystemWindows="true"
       android:fillViewport="true"
       >

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/txtEmail"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               style="@style/LoginTextInput"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:hint="@string/email"
               android:layout_marginStart="14dp"
               android:layout_marginEnd="14dp"
               android:layout_marginTop="120dp"
               >

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/etEmail"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="@color/black"
                   android:inputType="textEmailAddress"
                   />

           </com.google.android.material.textfield.TextInputLayout>


           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/txtPassword"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               style="@style/LoginTextInput"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/txtEmail"
               android:hint="@string/password"
               android:layout_marginStart="14dp"
               android:layout_marginEnd="14dp"
               android:layout_marginTop="14dp"
               app:passwordToggleEnabled="true"
               >

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/etPassword"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="@color/black"
                   android:inputType="textPassword"
                   />

           </com.google.android.material.textfield.TextInputLayout>


           <androidx.appcompat.widget.AppCompatButton
               android:id="@+id/btnLogin"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_marginHorizontal="14dp"
               android:layout_marginTop="14dp"
               android:backgroundTint="@color/colorPrimary"
               android:fontFamily="@font/open_sans_semibold"
               android:paddingTop="20dp"
               android:paddingBottom="20dp"
               android:text="@string/login"
               android:textAllCaps="false"
               android:textColor="@color/white"
               android:textSize="14sp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/txtPassword"
               app:layout_constraintVertical_bias="0.0" />

       </androidx.constraintlayout.widget.ConstraintLayout>

   </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>